# GoalFish

./: .env.example  .gitignore  README.md  README.zh.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  config.py  llm_json_mode.py  llm_protocol.py
backend/scripts/: backtest_predictions.py  build_country_alias.py  clean_fm_wc2026.py  import_player_dataset.py  migrate_projects_to_db.py  migrate_reports_to_db.py
backend/tests/: conftest.py  db_utils.py  test_analyst_notes_writer.py  test_backtest_predictions.py  test_celery_app.py  test_celery_entrypoints.py  test_coach_llm_panel.py  test_coach_review_writer.py  test_console_log_tee.py  test_content_language.py  test_event_narrative_polisher.py  test_external_data_sources.py  test_file_parser.py  test_football_commentator_injection.py  test_football_data_extractor.py  test_football_goal_model.py  test_football_prediction_engine.py  test_graph_api_simulation_domain.py  test_graph_backend.py  test_graph_build_workflow.py  test_graph_evidence_query.py  test_graph_simulation_report_db_persistence.py  test_graph_task_status.py  test_graphiti_graph_builder.py  test_graphiti_ollama_embedder.py  test_import_player_dataset.py  test_llm_budget.py  test_llm_client_json_mode.py  test_llm_content_language_prompts.py  test_llm_logging.py  test_locale.py  test_logger.py  test_match_simulator.py  test_name_normalization.py  test_ollama_chat.py  test_ontology_generator.py  test_player_rating_model.py  (+18 more)
(+151 files in other folders)
